# IN2354

./: .gitignore  README.md
Exercise-0/: CMakeLists.txt
Exercise-1/: main.cpp
Exercise-2/: ImplicitSurface.h  MarchingCubes.h  main.cpp
Exercise-3/: CMakeLists.txt  dragon.cpp  gaussian.cpp  output_dragon.txt  output_gaussian.txt  output_surface.txt  plot_dragon.py  plot_gaussian.py  plot_surface.py  surface.cpp
Exercise-3/utils/: points.h
Exercise-4/: ProcrustesAligner.h  main.cpp
Exercise-5/: CMakeLists.txt  ICPOptimizer.h  PointCloud.h  main.cpp
Exercises/Exercise-1/: CMakeLists.txt  main.cpp
Libs/Ceres/Ceres/CMake/: CeresConfig.cmake  CeresTargets.cmake
Libs/Ceres/Ceres/include/ceres/internal/: config.h
Media/: output_dragon.txt  output_gaussian.txt  output_surface.txt
